manifests/main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex2-07-main-dep
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex2-07-main
  template:
    metadata:
      labels:
        app: ex2-07-main
    spec:
      containers:
        - name: ex2-07-main
          image: katilp/ex2-07-main:v1.0.2
          resources:
            limits:
              cpu: "200m" # limit "m" stands for "thousandth of a core"
              memory: "100Mi"
