manifests/pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-dep
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
        - name: pong
          image: katilp/ex2-07-pong:v1.0.2
          resources:
            limits:
              cpu: "200m" # limit "m" stands for "thousandth of a core"
              memory: "100Mi"
