manifests/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex2-07-main-svc
  namespace: apps
spec:
  type: NodePort
  selector:
    app: ex2-07-main
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
      name: main
