manifests/pong-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-np-svc
  namespace: apps
spec:
  type: NodePort
  selector:
    app: pong
  ports:
    - name: ingr
      protocol: TCP
      port: 2345
      targetPort: 3000
