manifests/pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
  namespace: apps
spec:
  #type: NodePort
  type: ClusterIP
  selector:
    app: pong
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
